--- a/web_basic/html/css_study/html/notice2.html
+++ b/web_basic/html/css_study/html/notice2.html
@@ -4,7 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/notice2.css">
+    <link rel="stylesheet" href="../css/notice.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -19,11 +20,12 @@
                 <li>AirPods</li>
                 <li>TV 및 홈</li>
                 <li>엔터테인먼트</li>
+                <li>엔터테인먼트</li>
                 <li>액세서리</li>
                 <li>고객지원</li>
                 <li>검색</li>
                 <li>장바구니</li>
-            </ul>     
+            </ul>
         </header>
         <header class="sub-header">
             <h2 class="sub-header-title">MackBook Air</h2>
@@ -33,13 +35,85 @@
                     <a href=""><li>사양비교</li></a>
                 </ul>
         </header>
+
         <div class="advertising-container">
-            <div>
-                대학 생활용 AirPods을 구할 수 있는 마지막 기회. 교육 할인가로 Mac 또는 iPad도 보다 저렴하게.◊◊ 프로모션 3월 13일 종료.◊◊◊ 지금 쇼핑하기
+            <div class="advertising-content">
+                대학 생활용 AirPods을 구할 수 있는 마지막 기회. 교육 할인가로 Mac 또는 iPad도 보다 저렴하게.◊◊ 프로모션 3월 13일 종료.◊◊◊ <a href="" class="now-shop"> 지금 쇼핑하기</a>
             </div>
-
         </div>
-    </div>
 
+        <main class="product-main">
+             <div class="product-main-title">
+                <h1 class="main-title-text">새 MacBook Air를 구입해볼까요?</h1>
+            </div>
+            <div class="product-select-list">
+                <button class="product-select-button">M1 칩 모델</button>
+                <button class="product-select-button selected">M2 칩 모델</button>
+            </div>
+            <div class="product-informations">
+                <div><i class="fa-regular fa-comments"></i></div>
+                <div>Mac 구입과 관련해 궁금한 점이 있으신가요?</div>
+                <a href="">Mac 스페셜리스트와 상담하세요</a>
+            </div>
+            <div class="product-list">
+                <div class="product-container">
+                    <div class="product-image-container">
+                        <img src="../images/macbookair1.jpg">
+                    </div>
+                    <div class="product-color-list">
+                        <span class="color-text">미드나이트</span>
+                        <div class="color-radio-group">
+                            <input type="radio" id="c1" name="productColor">
+                            <label for="c1">
+                                <div class="color-circle c1"></div>
+                            </label>
+                            <input type="radio" id="c2" name="productColor">
+                            <label for="c2">
+                                <div class="color-circle c2"></div>
+                            </label>
+                            <input type="radio" id="c3" name="productColor">
+                            <label for="c3">
+                                <div class="color-circle c3"></div>
+                            </label>
+                            <input type="radio" id="c4" name="productColor">
+                            <label for="c4">
+                                <div class="color-circle c4"></div>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="product-detail-info">
+                        <div class="cpu-image">
+                            <img src="../images/appleM2.png" alt="">
+                        </div>
+                        <div class="product-simple-info">8코어 CPU</div>
+                        <div class="product-simple-info">8코어 GPU</div>
+                        <div class="product-simple-info">8GB 통합 메모리</div>
+                        <div class="product-simple-info">256GB SSD 저장 장치¹</div>
+                        <ul class="product-sepcs-list">
+                            <li>16코어 Neural Engine</li>
+                            <li>True Tone을 갖춘 34.5cm Liquid Retina 디스플레이</li>
+                            <li>1080p FaceTime HD 카메라</li>
+                            <li>MagSafe 3 충전 포트</li>
+                            <li>Thunderbolt/USB 4 포트 2개</li>
+                            <li>Touch ID 탑재형 Magic Keyboard</li>
+                            <li>Force Touch 트랙패드</li>
+                            <li>30W USB-C 전원 어댑터</li>
+                        </ul>
+                        <div price-container>
+                            <div class="product-price">₩1,690,000</div>
+                            <div class="product-price-monthly-plan">약 ₩153,636의 VAT 포함◊</div>
+                            <a href="" class="monthly-plan-link">최대 12 개월 신용 카드 할부</a>
+                        </div>
+                        <div class="bosang-container"></div>
+                            <h3 class=""></h3>
+                            <h3 class="bosang1">보상 판매 내용 추가</h3>
+                                <div class="bosang2">보상 판매 대상 컴퓨터를 새 Mac 구매 시 사용할 수 있는 크레딧으로 교환해드리거나, 무료로 재활용해드립니다.*</div>
+                                <div class="start">시작하기</div>
+                            
+                    </div> 
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
